# NoFomo

./: .gitignore  LICENSE  README.md  pyproject.toml
config/: keywords.yaml  sources.yaml  telegram.yaml
config.example/: keywords.yaml  sources.yaml  telegram.yaml
docs/history/: v1_tech.md
docs/superpowers/plans/: 2026-04-12-rss-daily-digest-v1.md
docs/superpowers/specs/: 2026-04-11-rss-daily-digest-design.md
src/nofomo/: deduper.py  keyword_matcher.py  logging_utils.py  main.py  models.py  normalizer.py  report_builder.py  report_store.py  rss_fetcher.py  settings.py  source_loader.py  summarizer.py  telegram_feedback.py  telegram_sender.py
src/nofomo.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_deduper.py  test_feedback_parser.py  test_keyword_matcher.py  test_main_run_digest.py  test_main_sync_feedback.py  test_normalizer.py  test_report_builder.py  test_source_loader.py  test_summarizer.py  test_telegram_sender.py
